# ros2_visualization_playground

./: README.md
.github/workflows/: ros2_foxy.yml
telemetry_data_generation/: CMakeLists.txt  package.xml
telemetry_data_generation/include/telemetry_data_generation/: telemetry_data_generation.hpp
telemetry_data_generation/src/telemetry_data_generation/: telemetry_data_generation.cpp  telemetry_data_node.cpp
telemetry_visualization/: CMakeLists.txt  package.xml
telemetry_visualization/config/perspectives/: pose.perspective
telemetry_visualization/config/plotjuggler/: layout.xml
telemetry_visualization/src/quat2euler/: quat2euler_node.cpp
