<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>telemetry_visualization</name>
  <version>0.0.1</version>
  <description>Code and configuration to visualize telemetry data</description>
  <maintainer email="agalbachicar@ekumenlabs.com">Agustin Alba Chicar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>plotjuggler</depend>

  <exec_depend>rqt_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
